Add: create media query for XXL screens

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,6 +1,11 @@
+/*MEDIA QUERIES FOR XXL SCREENS*/
+@media screen and (max-width: 1400px) {
+
+}
+
 /*MEDIA QUERIES FOR XL SCREENS*/
 @media screen and (max-width: 1200px) {
-    
+
 }
 
 /*MEDIA QUERIES FOR L SCREENS*/
