Fix: hide mobile menu icons from desktop view

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -58,6 +58,14 @@ The elements declared here are gener*/
 .headerbar a:visited:hover {
     color: #6920DD;
 }
+
+.headerbar__mobile {
+    display: none;
+}
+
+.headerbar__mobile--close {
+    display: none;
+}
 /*HEADER END*/
 
 /*SETS BOX SIZING TO BORDER BOX FOR ALL ELEMENTS*/
