--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -291,19 +291,27 @@ span {
 }
 
 .grid-card__background--basics {
-    background-image: url("assets/img/fab-forever-cards-basics.webp");
+    background-image: 
+    url("assets/img/fab-forever-cards-basics.webp"),
+    url("assets/img/fab-forever-cards-basics.png");
 }
 
 .grid-card__background--models {
-    background-image: url("assets/img/fab-forever-cards-models.webp");
+    background-image: 
+    url("assets/img/fab-forever-cards-models.webp"),
+    url("assets/img/fab-forever-cards-models.png");
 }
 
 .grid-card__background--help {
-    background-image: url("assets/img/fab-forever-cards-help.webp");
+    background-image: 
+    url("assets/img/fab-forever-cards-help.webp"),
+    url("assets/img/fab-forever-cards-help.png");
 }
 
 .grid-card__background--materials {
-    background-image: url("assets/img/fab-forever-cards-materials.webp");
+    background-image: 
+    url("assets/img/fab-forever-cards-materials.webp"),
+    url("assets/img/fab-forever-cards-materials.png");
 }
 
 /*Here we style the testimonial with flex*/
