Update fila path for images to absolute

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -298,8 +298,8 @@ span {
 
 .grid-card__background--models {
     background-image: 
-    url("assets/img/fab-forever-cards-models.webp"),
-    url("assets/img/fab-forever-cards-models.png");
+    url("https://rebellionwebdesign.github.io/fab-forever/assets/img/fab-forever-cards-models.webp"),
+    url("https://rebellionwebdesign.github.io/fab-forever/assets/img/fab-forever-cards-models.png");
 }
 
 .grid-card__background--help {
