--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -261,6 +261,11 @@ actually only this one together with the styles for the grid cards and their con
     padding-top: 1.5em;
     padding-bottom: 1.5em;
 }
+
+.headerbar__logo {
+    width: 20rem;
+}
+
 /*Styles for the about section´s grid cards*/
 .grid-container {
     place-items: end;
