--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -254,6 +254,7 @@ actually only this one together with the styles for the grid cards and their con
 }
 
 /*LOCAL STYLES FOR ELEMENTS WHICH NEED CUSTOM STYLING*/
+
 /*Styles for the header*/
 .headerbar {
     width: 100vw;
@@ -264,6 +265,16 @@ actually only this one together with the styles for the grid cards and their con
 
 .headerbar__logo {
     width: 20rem;
+}
+
+ul {
+    list-style-type: none;
+}
+
+ul > a {
+    text-decoration: none;
+    display: inline-block;
+    padding-right: 1.5em;
 }
 
 /*Styles for the about section´s grid cards*/
