Add styles to nav links

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -278,6 +278,8 @@ ul {
 }
 
 ul > a {
+    font-family: poppins, sans-serif;
+    color: var(--color-dark);
     text-decoration: none;
     display: inline-block;
     padding-right: 1.5em;
