--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -833,7 +833,53 @@ Since we work from the desktop down (desktop-first design) we need to order the 
 /*MEDIA QUERIES FOR S SCREENS*/
 @media only screen and (max-width: 576px) {
 
-    
+    /*RESPONSIVE HEADER STYLES FOR XS*/
+    .headerbar__logo--mobile {
+        width: 15rem;
+    }
+
+    .container--mobile {
+        width: 95%;
+    }
+
+    .column-2__open--mobile {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .mobile--open {
+        width: 2.5rem;
+        height: 2.5rem;
+    }
+
+    .column-2__nav--mobile {
+        padding: 0.5em;
+        display: flex;
+        align-items: center;
+        width: 45vw;
+        height: 100vh;
+        background: var(--color-secondary);
+        background: linear-gradient(43deg, var(--color-secondary) 0%, var(--color-primary) 95%);
+        position: absolute;
+        right: 0;
+        top: 0;
+        display: none;
+    }
+
+    nav {
+        width: 100%;
+    }
+
+    ul > a {
+        width: 100%;
+        justify-content: center;
+        padding-top: 1em;
+        padding-right: 0;
+        color: white;
+        display: flex;
+    }
 
     /*HERO SECTION STYLES FOR XS*/ 
     h1 {
@@ -953,7 +999,6 @@ Since we work from the desktop down (desktop-first design) we need to order the 
 /*MEDIA QUERIES FOR XS SCREENS*/
 @media only screen and (max-width: 375px) {
 
-    
     /*RESPONSIVE HEADER STYLES FOR XS*/
     .headerbar__logo--mobile {
         width: 15rem;
