--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -833,7 +833,7 @@ Since we work from the desktop down (desktop-first design) we need to order the 
 /*MEDIA QUERIES FOR S SCREENS*/
 @media only screen and (max-width: 576px) {
 
-    /*RESPONSIVE HEADER STYLES FOR XS*/
+    /*RESPONSIVE HEADER STYLES FOR S*/
     .headerbar__logo--mobile {
         width: 15rem;
     }
