Create class closed for mobile nav

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1141,6 +1141,10 @@ Since we work from the desktop down (desktop-first design) we need to order the 
         display: flex;
     }
 
+    .closed {
+        width: 0;
+    }
+
     /*HERO SECTION STYLES FOR XS*/ 
     h1 {
         font-size: 2.5rem;
