Fix testimonial card width on S to L devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1111,6 +1111,7 @@ Since we work from the desktop down (desktop-first design) we need to order the 
 
     .testimonial-card {
         margin-top: 3em;
+        width: 80%;
     }
 
     .testimonial-card  img {
